Refactored and formatted code